[project]
name = "scheduler"
version = "0.1.0"
dependencies = [
    "requests>=2.28.0",
]
requires-python = ">=3.10,<=3.12.4"

[project.optional-dependencies]
dev = [
  "pre-commit==2.20.0",
  "black==21.12b0",
  "isort==5.10.1",
  "mypy==0.971",
  "pytest>=7.0.0",
  "pytest-httpx>=0.21.0",
  "pytest-asyncio>=0.21.0"
]

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"
